# microcrm

./: .env.example  Dockerfile  Makefile  alembic.ini  pyproject.toml  requirements.txt
docker/: cache.yml  docker-compose.yml
src/: config.py  database.py  main.py  models.py
src/clients/: models.py
src/dao/: base.py
src/deals/: models.py
src/frontend/: dependencies.py  router.py
src/frontend/public/: dashboard.html  login.html
src/frontend/public/static/: app.js  deals.js  login.css  login.js  pages.js  sidebar.js  styles.css
src/migrations/: env.py
src/migrations/versions/: 0a3de09fcbee_fix_user_role_relationship.py  406023914116_migrations_create_username_unique.py  61a34327639e_fix_relationship.py  671dad9ec696_initial.py  6a92fcd823a0_fix_cycle_import.py
src/users/: auth.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
