[tool.black]
line-length = 100
target_version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []
ignore = [
    "E501",
    "B008",
    "C901",
]
select = [
    "E",
    "W",
    "F",
    "C",
    "B",
]

[project]
name = "microcrm"
version = "0.1.0"
description = "microcrm app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "black>=25.1.0",
    "fastapi>=0.115.13",
    "fastapi-cache2[redis]>=0.1.8",
    "jinja2>=3.1.6",
    "passlib>=1.7.4",
    "pydantic-settings>=2.10.0",
    "python-jose>=3.5.0",
    "redis>=6.2.0",
    "ruff>=0.12.0",
    "telebot>=0.0.5",
    "uvicorn>=0.34.3",
    "wsproto>=1.2.0",
]
